@@ -1,13 +1,14 @@
 # Created by Jevoom
 #
-# 11-Sep-2013
-#   Added a couple of helpers (an_executable) and removed thor from utility.
+# 19-Sep-2013
+#   Corrected some minor yard issues
+#   
 
 module Jeckyl
-  # version set to 0.3.6
-  Version = '0.3.6'
-  # date set to 11-Sep-2013
-  Version_Date = '11-Sep-2013'
-  #ident string set to: jeckyl-0.3.6 11-Sep-2013
-  Ident = 'jeckyl-0.3.6 11-Sep-2013'
+  # version set to 0.3.7
+  Version = '0.3.7'
+  # date set to 19-Sep-2013
+  Version_Date = '19-Sep-2013'
+  #ident string set to: jeckyl-0.3.7 19-Sep-2013
+  Ident = 'jeckyl-0.3.7 19-Sep-2013'
 end
